[package]
name = "controlpad_server"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs2="*"
ggez="0.7.0"
tungstenite="0.18.0"
rand="0.8.5"

[lib]
name = "controlpads"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/test_client.rs"

[[bin]]
name = "target"
path = "src/test_target.rs"
