[package]
name = "controlpad_server"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs2="*"
tungstenite="0.18.0"
rand="0.8.5"
unidecode="0.3.0"

[lib]
#crate-type = ["staticlib"]
#crate-type = ["dylib"]
name = "controlpads"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/test_client.rs"

[[bin]]
name = "target"
path = "src/test_target.rs"
